# langfuse-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.git-objects/info/commit-graphs/: commit-graph-chain  graph-0939569048f20e5900f08bad04ebc9988b74d64b.graph  graph-46bc1e807471bf19ea3b750fadf4da0f2a21e4ea.graph  graph-77fd324ad9b9b09c77b65f5f5aa81a3385b06688.graph
.git-safe/: HEAD  config  index  kapsis-meta  objects
.git-safe/info/: exclude
.git-safe/refs/heads/slack-bot/: f91cf4
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: publish.yml  release-drafter.yml  stale.yml  test.yml  update-homebrew.yml
scripts/: generate-formula.py  pre-push  route_model_comparison.py
src/langfuse_cli/: __init__.py  _defaults.py  _exit_codes.py  _tty.py  client.py  config.py  main.py  output.py
src/langfuse_cli/commands/: __init__.py  datasets.py  experiments.py  hello.py  observations.py  prompts.py  scores.py  sessions.py  traces.py
src/langfuse_cli/formatters/: diff.py  table.py  tree.py
tests/: conftest.py  test_client.py  test_config.py  test_datasets.py  test_experiments.py  test_formatters.py  test_hello.py  test_observations.py  test_output.py  test_prompts.py  test_scores.py  test_sessions.py  test_traces.py  test_tty.py
