[project]
name = "langfuse-cli"
version = "0.1.3"
description = "CLI tool for Langfuse LLM observability platform, following gh-ux patterns"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Aviad S."}]
keywords = ["langfuse", "llm", "observability", "cli", "tracing", "prompts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "langfuse>=3.0.0",
    "keyring>=25.0.0",
]

[project.urls]
Homepage = "https://github.com/aviadshiber/langfuse-cli"
Repository = "https://github.com/aviadshiber/langfuse-cli"
"Bug Tracker" = "https://github.com/aviadshiber/langfuse-cli/issues"
Changelog = "https://github.com/aviadshiber/langfuse-cli/releases"

[project.scripts]
lf = "langfuse_cli.main:app"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langfuse_cli"]

[tool.uv]
default-groups = ["dev"]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=langfuse_cli --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "PL",
    "RUF",
    "B",
    "C4",
    "T20",
    "PT",
]
ignore = [
    "PLR0913",
    "PLC0415",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/test_*.py" = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
